--- a/website/content/reference/_index.Rmd
+++ b/website/content/reference/_index.Rmd
@@ -42,7 +42,8 @@ output:
 - [Pandoc](http://pandoc.org). Converts plain-text documents to and from a wide variety of formats. Can be installed with Homebrew. Be sure to also install `pandoc-citeproc` for processing citations and bibliographies, and `pandoc-crossref` for producing cross-references and labels.
 - [Git](http://git-scm.org). Version control system. Installs with Apple's Developer Tools, or get the latest version via Homebrew.
 - [GNU Make](http://www.gnu.org/software/make). You tell `make` what the steps are to create the pieces of a document or program. As you edit and change the various pieces, it automatically figures out which pieces need to be updated and recompiled, and issues the commands to do that. See Karl Broman's [Minimal Make](http://kbroman.org/minimal_make/) for a short introduction. Make will be installed automatically with Apple's developer tools.
-- [lintr](https://github.com/jimhester/lintr) and [flycheck](https://github.com/flycheck/flycheck). Tools that nudge you to write neater code.    
+- [lintr](https://github.com/jimhester/lintr) and [flycheck](https://github.com/flycheck/flycheck). Tools that nudge you to write neater code.
+- [Zotero](http://zotero.org). A citation manager that incorporates PDF storage, annotation, and other features. Zotero is free to use and can export to BibTeX/BibLaTeX files.
     
 ## Paid Applications and Services
 
@@ -50,7 +51,7 @@ output:
 - [GitHub](http://github.com). Host public Git repositories for free. Pay to host private ones. Also a source for publicly available code (e.g. R packages and utilities) written by other people.
 - [Marked 2](http://marked2app.com). Live HTML previewing of Markdown documents. Mac OS X only.
 - [Sublime Text](http://sublimetext.com). Python-based text editor.
-- [Zotero](http://zotero.org), [Mendeley](http://mendeley.com), and [Papers](http://papersapp.com) are citation managers that incorporate PDF storage, annotation and other features. Zotero is free to use. Mendeley has a premium tier. Papers is a paid application after a trial period. I don't use these tools much, but that's not for any strong principled reason---mostly just intertia. If you use one and want to integrate with the material here, just make sure it can export to BibTeX/BibLaTeX files. Papers, which I've used most recently, can handily output citation keys in pandoc's format amongst several others.
+- [Mendeley](http://mendeley.com), and [Papers](http://papersapp.com) are additional citation managers that incorporate PDF storage, annotation, and other features. Mendeley has a premium tier. Papers is a paid application after a trial period. I haven't used either of these, so I can't confirm whether or not they export to BibTeX/BibLaTeX files. Papers can supposedly output citation keys in pandoc's format, among several others.
 
 ## Data
 
@@ -63,6 +64,7 @@ to get data.
 - World Health Organization [WHO data](https://www.who.int/gho/database/en/)
 - UniProt [data](https://www.uniprot.org/)
 - The Gene Ontology [Project](http://geneontology.org/)
+- Gene Expression Omnibus [Data](https://www.ncbi.nlm.nih.gov/geo/)
 - US Center for Disease Control and Prevention [Data](https://data.cdc.gov/)
 - California Health and Human Services [Open Data Portal](https://data.chhs.ca.gov/)
 - Covid Data [CovidTracker](https://covidtracking.com/)
@@ -83,10 +85,11 @@ to get data.
 - US Open Data Initiative [DATA.GOV](https://www.data.gov/)
 - Census Data [National Historical Geographic Information System (NHGIS)](https://www.nhgis.org/)
 - Housing data [Zillow](https://www.zillow.com/howto/api/APIOverview.htm)
+- Kaggle [datasets](https://www.kaggle.com/datasets)
 
 ### Social Networks
 
-- Twitter [Developers API](https://developer.twitter.com/)
+- Twitter [Developers API](https://developer.twitter.com/) (probably broken?)
 - GitHub [Developers API](https://docs.github.com/en/rest)
 - Instagram [Developers API](https://developers.facebook.com/docs/instagram-api/)
 - LinkedIn [Developers API](https://www.linkedin.com/developers/)
