--- a/website/content/assignment/01-lab.Rmd
+++ b/website/content/assignment/01-lab.Rmd
@@ -27,9 +27,9 @@ And to make versioning simpler, this is a solo lab. Additionally, we want to mak
 
 # Getting started
 
-## 1. Download project
+## 1 Download project
 
-Go the the the lab page for this week on the [website](/PM566/class/01-class/). You should see a "download" button under the "Lab Exercise" section. Click it to download the material.
+Go the the the lab page for this week on the [website](/PM566/class/01-class/). You should see a "Download" button under the "Lab Exercise" section. Click it to download the template for your responses to this lab, `01-lab-hello-r.Rmd`.
 
 ## 2 Download R
 
@@ -111,10 +111,11 @@ Open the R Markdown (Rmd) file in your project, change the author name to your n
 ![](/assignment-img/yaml-raw-to-rendered.png)
 # Data
 
-The data frame we will be working with today is called `datasaurus_dozen` and it's in the `datasauRus` package. Actually, this single data frame contains 13 datasets, designed to show us  why data visualisation is important and how summary statistics alone can be misleading. The different datasets are maked by the `dataset` variable.
+The data frame we will be working with today is called `datasaurus_dozen` and it's in the `datasauRus` package. Actually, this single data frame contains 13 datasets, designed to show us  why data visualisation is important and how summary statistics alone can be misleading. The different datasets are marked by the `dataset` variable.
 
 To find out more about the dataset, type the following in your Console: `?datasaurus_dozen`. A question mark before the name of an object will always bring up its help file. This command must be ran in the Console.
 
+## Question 1
 1. Based on the help file, how many rows and how many columns does the `datasaurus_dozen` file have? What are the variables included in the data frame? Add your responses to your lab report. 
 
 Let's take a look at what these datasets are. To do so we can make a *frequency table* of the dataset variable:
@@ -122,12 +123,14 @@ Let's take a look at what these datasets are. To do so we can make a *frequency 
 ```{r}
 datasaurus_dozen %>%
   count(dataset)
+# table(datasaurus_dozen$dataset)
 ```
 
 The original Datasaurus (`dino`) was created by Alberto Cairo in [this great blog post](http://www.thefunctionalart.com/2016/08/download-datasaurus-never-trust-summary.html). The other Dozen were generated using simulated annealing and the process is described in the paper *Same Stats, Different Graphs: Generating Datasets with Varied Appearance and Identical Statistics* through Simulated Annealing by Justin Matejka and George Fitzmaurice. In the paper, the authors simulate a variety of datasets that the same summary statistics to the Datasaurus but have very different distributions.
 
 # Data visualization and summary
 
+## Question 2
 2. Plot `y` vs. `x` for the `dino` dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset.
 
 Below is the code you will need to complete this exercise. Basically, the answer is already given, but you need to include relevant bits in your Rmd document and successfully knit it and view the results.
@@ -137,6 +140,7 @@ Start with the `datasaurus_dozen` and pipe it into the `filter` function to filt
 ```{r}
 dino_data <- datasaurus_dozen %>%
   filter(dataset == "dino")
+# dino_data <- datasaurus_dozen[datasaurus_dozen$dataset == 'dino', ]
 ```
 
 There is a lot going on here, so let's slow down and unpack it a bit. 
@@ -150,11 +154,12 @@ Next, we need to visualize these data. We will use the `ggplot` function for thi
 ```{r fig.fullwidth=TRUE}
 ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
   geom_point()
+# plot(dino_data$x, dino_data$y)
 ```
 
-If this seems like a lot, it is. And you will learn about the philosophy of building data visualizations in layer in detail in the upcoming class. For now, follow along with the code that is provided.
+If this seems like a lot, it is. And you will learn about the philosophy of building data visualizations in layers in detail in the upcoming class. For now, follow along with the code that is provided.
 
-For the second part of this exercises, we need to calculate a summary statistic: the correlation coefficient. Correlation coefficient, often referred to as $r$ in statistics, measures the linear association between two variables. You will see that some of the pairs of variables we plot do not have a linear relationship between them. This is exactly why we want to visualize first: visualize to assess the form of the relationship, and calculate $r$ only if relevant. In this case, calculating a correlation coefficient really doesn't make sense since the relationship between `x` and `y` is definitely not linear -- it's dinosaurial!
+For the second part of these exercises, we need to calculate a summary statistic: the correlation coefficient. Correlation coefficient, often referred to as $r$ in statistics, measures the linear association between two variables. You will see that some of the pairs of variables we plot do not have a linear relationship between them. This is exactly why we want to visualize first: visualize to assess the form of the relationship, and calculate $r$ only if relevant. In this case, calculating a correlation coefficient really doesn't make sense since the relationship between `x` and `y` is definitely not linear -- it's dinosaurial!
 
 But, for illustrative purposes, let's calculate correlation coefficient between `x` and `y`.
 
@@ -163,14 +168,18 @@ Start with `dino_data` and calculate a summary statistic that we will call `r` a
 ```{r, eval=FALSE}
 dino_data %>%
   summarize(r = cor(x, y))
+# cor(dino_data$x, dino_data$y)
 ```
 
+## Question 3
 3. Plot `y` vs. `x` for the `star` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
 
+## Question 4
 4. Plot `y` vs. `x` for the `circle` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
 
 Facet by the dataset variable, placing the plots in a 3 column grid, and don't add a legend.
 
+## Question 5
 5. Finally, let's plot all datasets at once. In order to do this we will make use of facetting.
 
 ```{r all-viz, eval=FALSE, fig.fullwidth=TRUE}
@@ -178,6 +187,13 @@ ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset))+
   geom_point()+
   facet_wrap(~ dataset, ncol = 3) +
   theme(legend.position = "none")
+# layout(matrix(1:16, ncol=4))
+# for(i in 1:length(unique(datasaurus_dozen$dataset))){
+#   dset_name <- unique(datasaurus_dozen$dataset)[i]
+#   subset <- datasaurus_dozen[datasaurus_dozen$dataset == dset_name, ]
+#   plot(subset$x, subset$y, main = dset_name, col = i)
+# }
+# layout(1)
 ```
 
 And we can use the `group_by` function to generate all correlation coefficients.
@@ -186,6 +202,10 @@ And we can use the `group_by` function to generate all correlation coefficients.
 datasaurus_dozen %>%
   group_by(dataset) %>%
   summarize(r = cor(x, y))
+# sapply(unique(datasaurus_dozen$dataset), function(ds){
+#     subset <- datasaurus_dozen[datasaurus_dozen$dataset == ds, ]
+#     cor(subset$x, subset$y)
+# })
 ```
 
 You're done with the data analysis exercises, but we'd like you to do two more things:
