--- a/website/content/assignment/02-lab.Rmd
+++ b/website/content/assignment/02-lab.Rmd
@@ -8,7 +8,7 @@ link-citations: yes
 
 In this lab, you are expected to learn/put in practice the following skills:
 
-- Forking on GitHub
+- Forking a repository on GitHub
 - Git workflow clone/commit/push
 - Using pull requests (PR)
 
@@ -19,8 +19,8 @@ the course, meaning that your grade will depend on it :).
 # Updating a single repo
 
 One of the most common tasks that people uses git for is for collaborating. While
-in general team members organize such that there are no overlapping editing of
-the files, git is smart enough to avoid clashes when multiple edits are done in
+in general team members organize such that there is no overlapping editing of
+the files, `git` is (usually) smart enough to avoid clashes when multiple edits are done in
 the same document[^multiedits]. To show this, we will do a collaborative edit of
 a file!
 
@@ -30,57 +30,41 @@ the changes without conflicts.
 
 We will be working with the repository https://github.com/USCbiostats/PM566-whoami
 
-## Step 1: For the project in your repo
+## Step 1: Fork the project to create your own repo
 
 Not a term/command actually available in Git, forking is a feature available in
 Github (as in other services) that allows users to create copies of other people's
 projects to propose changes (i.e. make **pull requests**, i.e. "I have this
-great update to your project! Would you like to add it by *pulling it* into your
+great update for your project! Would you like to add it by *pulling it* into your
 repo?").
 
-To start you just need to use the Fork button available on the project you would
+To start, you just need to use the Fork button available on the main page of the repository you would
 like to contribute to[^githubmanualfork]:
 
 [^githubmanualfork]: For more details, take a look at the [Forking Projects](https://guides.github.com/activities/forking/) article in GitHub guides.
 
-<figure>
-<img src="https://github-images.s3.amazonaws.com/help/bootcamp/Bootcamp-Fork.png" width="400px">
-<figcaption>Source: GitHub Help</figcaption>
-</figure>
 
 Once you "Fork" a project, GitHub will:
 
 1. Create a copy (using `git clone`) of that project in your account.
 
-2. Set up a pipeline to generate pull requests.
+2. Set up a pipeline to generate pull requests for the original repository.
 
-<figure>
-<img src="https://github-images.s3.amazonaws.com/help/pull_requests/recently_pushed_branch.png" width="600px">
-<figcaption>Source: GitHub Help</figcaption>
-</figure>
-
-Or 
-
-<figure>
-<img src="https://user-images.githubusercontent.com/893619/132388465-849ef04d-ad4f-4365-a646-27e88cb9d828.png" width="600px">
-<figcaption>Source: Screenshot!</figcaption>
-</figure>
 
 Once you have a copy of the project in your account, you can proceede by
 "downloading it" to your computer using the `git clone` command. For example, if
-your github user name is `statsnerd` and the original repository is `Spoon-Knife`
-(as in the example), you could use the following in your command line
+your github user name is `statsnerd` and the original repository is `PM566-whoami`, you could use the following in your command line
 
 ```shell
-cd a-place-where-you-want-to-download-the-thing
-git clone https://github.com/statsnerd/Spoon-Knife.git
+cd where/you/want/to/download/the/thing
+git clone https://github.com/statsnerd/PM566-whoami.git
 ```
 
 And if you have your ssh credentials set up, you can do instead
 
 ```shell
-cd a-place-where-you-want-to-download-the-thing
-git clone git@github.com:statsnerd/Spoon-Knife.git
+cd where/you/want/to/download/the/thing
+git clone git@github.com:statsnerd/PM566-whoami.git
 ```
 
 This way you will get a copy of the repository in your local machine. Now, let's
@@ -89,20 +73,18 @@ see how can we update the project!
 ## Step 2: Modifying the corresponding line
 
 If you got the correct copy, you should find a very simple repository with only
-two files: `.gitignore` and `README.md`. The first file is just a reference file
-for git to know what things it should be "looking at" (checkout the lecture
-slides), so we will **ignore it** at this time (pun intended). The second file
-is the one that we will be playing with. The readme file, which happens to be
+two files: `CODE_OF_CONDUCT.md` and `README.md`. The first file is a general code of conduct for the project, which we do not need to edit. The second file
+is the one that we will be playing with. The README file, which happens to be
 a [Markdown](https://en.wikipedia.org/wiki/Markdown) file, contains, or at least
-will contain, your and your team members biographies. Here is what you need to
+will contain, your and your team members' biographies. Here is what you need to
 do:
 
-1. Find the line with your name/student id number.
+1. Find the line with your name.
 
 2. In that single line (i.e. not spanning multiple lines), write something about
 yourself, e.g. "I am from XYZ, I love doing ABC, ...".
 
-3. (optional) if you feel like it, add at the beginning of the line a picture
+3. (optional) if you feel like it, add at the end of the line a picture
 of yourself (or avatar) using either html or markdown. This will require you
 to include the figure in the repo (if you are not linking a web fig).
 
@@ -136,22 +118,22 @@ the admins of target repo. More info [here](https://help.github.com/en/github/co
 
 
 To create the PR, you just need to go to your online copy of the project and
-click on "Compare & pull request" link:
+click on "Contribute" then "Open Pull Request":
 
 <figure>
-<img src="https://github-images.s3.amazonaws.com/help/pull_requests/recently_pushed_branch.png" width="600px">
-<figcaption>Source: GitHub Help</figcaption>
+<img src="https://user-images.githubusercontent.com/893619/132388465-849ef04d-ad4f-4365-a646-27e88cb9d828.png" width="600px">
+<figcaption>You can submit pull requests to the original repo from your copy of it via the "Contribute" button.</figcaption>
 </figure>
 
-This will create a PR in the reference repository. GitHub will automatically
+This will create a PR in the original repository. GitHub will automatically
 analyze the PR and check whether merging the PR to the master branch will result
 in a conflict or not. If all is OK, then the owner/admin of the repository can
 merge the PR. Otherwise, if there's a conflict, you can go back to your local
 repo, make the needed changes, commit the changes, and push the changes to
-your copy on github. In this stage, the PR will automatically update to reflect
+your copy on GitHub. In this stage, the PR will automatically update to reflect
 the new changes you made in your copy of the project.
 
-For more information checkout [Creating a pull request from a fork
+For more information, check out [Creating a pull request from a fork
 ](https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request-from-a-fork)
 on GitHub.
 
