changed path to image in lab1 to old version because it wasn't rendering

--- a/website/content/assignment/01-lab.Rmd
+++ b/website/content/assignment/01-lab.Rmd
@@ -65,7 +65,7 @@ Open the R Markdown (Rmd) file called `lab-01-hello-r.Rmd`. It will likely ask y
 
 RStudio is comprised of four panes.
 
-![](../../static/assignment-img/rstudio-anatomy.png)
+![](assignment-img/rstudio-anatomy.png)
 
 ```{r rstudio-anatomy, fig.fullwidth=TRUE, echo = FALSE}
 knitr::include_graphics("../../static/assignment-img/rstudio-anatomy.png")
