set echo=FALSE in first, setup code chunk in lab4

--- a/website/content/assignment/04-lab.Rmd
+++ b/website/content/assignment/04-lab.Rmd
@@ -4,7 +4,7 @@ output: html_document
 link-citations: yes
 ---
 
-```{r}
+```{r, echo = FALSE}
 # Set to TRUE if you want the blocks to be evaluated 
 EVAL <- FALSE
 ECHO <- EVAL
