updated HW 1 & 2 dates, midterm dates, and changed lab 1 template to Quarto

--- a/website/content/assignment/03-hw1.Rmd
+++ b/website/content/assignment/03-hw1.Rmd
@@ -21,7 +21,7 @@ We will work with air pollution data from the U.S. Environmental Protection Agen
 
 A primer on particulate matter air pollution can be found [here](https://www.epa.gov/pm-pollution/particulate-matter-pm-basics).
 
-Your assignment should be completed in R markdown.
+Your assignment should be completed in Quarto or R Markdown.
 
 # Steps
 
