--- a/website/content/assignment/08-midterm.Rmd
+++ b/website/content/assignment/08-midterm.Rmd
@@ -1,20 +1,20 @@
 ---
 title: "Midterm Exam/Project"
 output: html_document
-date: 2022-10-05
+date: 2023-10-13
 ---
 
 ```{r setup, echo=FALSE}
 knitr::opts_chunk$set(include  = TRUE)
 ```
 
-Due Sunday, October 23rd, 2022 by midnight Pacific time 
+Due Sunday, October 22nd, 2023 by midnight Pacific Time.
 
-**Learning Objective** To apply the skills learned in PM 566 (up to Oct 5th) by analyzing and interpreting a dataset of your choice.
+**Learning Objective** To apply the skills learned in PM 566 (up to Oct 6th) by analyzing and interpreting a dataset of your choice.
 
 **Narrative** Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt. This midterm is a stepping stone for the final project.
 The first step in any data analysis is to have a dataset for which you have formulated an interesting question. If you do not have a dataset to work with, you may choose one from our [list of suggestions](/PM566/reference/#data). With your dataset, formulate a clear and concise question to answer and conduct data wrangling, exploratory data analysis, and data visualization to explore/answer this question.
 
-**Deliverable**: A knitted R markdown *written report*  (.html) with embedded tables and figures that is submitted to a project-specific github repository that you create. The report should have the following sections: Introduction (provide background on your dataset and formulated question), Methods (include how and where the data were acquired, how you cleaned and wrangled the data, what tools you used for data exploration), Preliminary Results (provide summary statistics in tabular form and publication-quality figures, take a look at the kable function from knitr to write nice tables in Rmarkdown), and a brief Conclusion about what you found in terms of the formulated question.
+**Deliverable**: A knitted Quart/R markdown *written report*  (.html) with embedded tables and figures that is submitted to a project-specific github repository that you create. The report should have the following sections: Introduction (provide background on your dataset and formulated question), Methods (include how and where the data were acquired, how you cleaned and wrangled the data, what tools you used for data exploration), Preliminary Results (provide summary statistics in tabular form and publication-quality figures, take a look at the kable function from knitr to write nice tables in Rmarkdown), and a brief Conclusion about what you found in terms of the formulated question.
 
 In your report, please do not include unformatted output or dataset summaries (e.g. output from head(), str(), etc.). You should summarize these aspects of your data within the text.
