updated dates on assignments (HWs, midterm, and final)

--- a/website/content/assignment/09-hw3.Rmd
+++ b/website/content/assignment/09-hw3.Rmd
@@ -2,12 +2,12 @@
 title: "Assignment 03 - Web Scraping and Text Mining"
 output: tufte::tufte_html
 link-citations: yes
-date: 2022-10-05
+date: 2022-10-27
 ---
 
 ## Due Date
 
-This assignment is due by midnight Pacific time, November 4, 2022 
+This assignment is due by midnight Pacific Time, November 3rd, 2023. 
 
 The learning objectives are to conduct data scraping and perform text mining.
 
