--- a/website/content/assignment/11-hw4.Rmd
+++ b/website/content/assignment/11-hw4.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Assignment 04 - HPC and SQL"
 output: tufte::tufte_html
-date: 2022-11-02
+date: 2022-11-10
 ---
 
 ## Due Date
 
-This assignment is due by midnight Pacific time, November 18, 2022
+This assignment is due by midnight Pacific Time, November 17th, 2023.
 
 The learning objectives are to conduct data scraping and perform text mining.
 
