--- a/website/content/assignment/13-hw5.Rmd
+++ b/website/content/assignment/13-hw5.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Assignment 05 - Interactive Visualization I and II"
 output: tufte::tufte_html
-date: 2022-11-16
+date: 2023-11-24
 ---
 
 ## Due Date
 
-This assignment is due by midnight Pacific time, December 2nd, 2022
+This assignment is due by midnight Pacific Time, December 1st, 2023.
 
 ## Interactive Visualization I and II
 
