minor edits to HWs

--- a/website/content/assignment/05-hw2.Rmd
+++ b/website/content/assignment/05-hw2.Rmd
@@ -55,7 +55,9 @@ The primary questions of interest are:
 
 
 Follow the EDA checklist from week 3 and the previous assignment. Be sure to focus on the key variables.
-Visualization
+
+## Visualization
+
 Create the following figures and interpret them. Be sure to include easily understandable axes, titles, and legends. 
 
 
